<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg3"
    android:orientation="vertical"
    tools:context=".NuevoActivity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/yourName"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold"/>

    <EditText

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/txtNombre"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:ems="10"
        android:hint="@string/h_nombre"
        android:inputType="text"
        android:textSize="20sp"
        android:background="@drawable/edittext_background"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="16dp"
        android:text="@string/yourPhone"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <EditText

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/txtTelefono"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:ems="10"
        android:hint="@string/h_telefono"
        android:inputType="phone"
        android:textSize="20sp"
        android:background="@drawable/edittext_background"/>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/yourCorreo"
        android:textSize="25sp"
        android:textColor="@color/white"
        android:textStyle="bold" />


    <EditText

        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:id="@+id/txtCorreoElectronico"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:paddingLeft="16dp"
        android:ems="10"
        android:hint="@string/h_correo"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:background="@drawable/edittext_background"/>


    <Button
        android:id="@+id/btnGuarda"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:backgroundTint="#f48fb1"
        android:hint="@string/btnGuardar"
        android:textSize="24sp"
        android:textStyle="bold" />

</LinearLayout>

